# sentinel

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  policy.yaml  pyproject.toml
app/: Dockerfile  config.py  service.py
app/graph/: build.py  executor.py  nodes.py  policy.py  state.py
app/graph/adapters/: base.py  grafana.py  mock_soc.py
app/scripts/: export_mermaid.py
app/web/: main.py  observability.py
app/web/static/: index.html
docs/: architecture.mmd
evals/: conftest.py  test_failure_surfacing.py  test_safety_invariant.py  test_task_success.py
soc_console/: Dockerfile  app.py  seed.py
tests/: test_adapters.py  test_config.py  test_executor.py  test_grafana_adapter.py  test_graph.py  test_kpis.py  test_mermaid_script.py  test_observability.py  test_policy.py  test_readme.py  test_service.py  test_soc_console.py  test_web.py
